test_regress/t/t_class_static_member_bad.out
%Error: t/t_class_static_member_bad.v:12:36: Cannot use 'this' in a static method 'run_phases' (IEEE 1800-2023 8.10-8.11)
   12 |       void'(m_phase_hopper.try_put(this));
      |                                    ^~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_class_static_member_bad.v:13:16: Cannot access non-static member variable 'm_successors' from a static method 'run_phases' without object (IEEE 1800-2023 8.10)
   13 |       foreach (m_successors[succ])
      |                ^~~~~~~~~~~~
%Error: Exiting due to
